<resources>
    <string name="app_name">P0-Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_score">Score App (Football)</string>
    <string name="football_library">Library App (Football)</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="header">My Nano-Degree Apps</string>

</resources>
