<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/header"
        android:id="@+id/textView"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:text="@string/spotify_streamer"
        android:id="@+id/button_spotify_streamer"
        style="@style/portfolio_button"
        android:background="@color/deep_purple_500"
        android:onClick="LaunchIntent"/>

    <Button
        android:text="@string/football_score"
        android:id="@+id/button_football_score"
        style="@style/portfolio_button"
        android:background="@color/pink_500"
        android:onClick="LaunchIntent"/>

    <Button
        android:text="@string/football_library"
        android:id="@+id/button_football_library"
        style="@style/portfolio_button"
        android:background="@color/teal_500"
        android:onClick="LaunchIntent"/>
    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        style="@style/portfolio_button"
        android:background="@color/indigo_500"
        android:onClick="LaunchIntent"/>

    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/button_xyz_reader"
        style="@style/portfolio_button"
        android:background="@color/red_500"
        android:onClick="LaunchIntent"/>
    <Button
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        style="@style/portfolio_button"
        android:background="@color/blue_500"
        android:onClick="LaunchIntent"/>



</LinearLayout>
</ScrollView>
